# try-ibis

./: README.md  pyproject.toml
examples/: 1.py
src/try_ibis/: __init__.py
